@@ -6,7 +6,6 @@ import com.sas.dhop.site.model.Choreography;
 import com.sas.dhop.site.model.DanceType;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.MappingTarget;
@@ -17,28 +16,25 @@ public interface ChoreographerMapper {
 
     @Mapping(target = "danceTypes", ignore = true)
     @Mapping(target = "user", ignore = true)
-    @Mapping(target = "subscription", ignore = true)
     @Mapping(target = "status", ignore = true)
     Choreography mapToChoreography(ChoreographerRequest request);
 
-    @Mapping(target = "danceTypeId", source = "danceTypes", qualifiedByName = "mapDanceTypeToId")
+    @Mapping(target = "danceTypeName", source = "danceTypes", qualifiedByName = "mapDanceTypeToName")
     @Mapping(target = "userId", source = "user.id")
-    @Mapping(target = "subscriptionId", source = "subscription.id")
     @Mapping(target = "statusId", source = "status.id")
     @Mapping(target = "userName", source = "user.name")
     ChoreographerResponse mapToChoreographerResponse(Choreography choreography);
 
-    @Named("mapDanceTypeToId")
-    default List<Integer> mapDanceTypeToId(Set<DanceType> danceTypes) {
+    @Named("mapDanceTypeToName")
+    default List<String> mapDanceTypeToName(Set<DanceType> danceTypes) {
         if (danceTypes == null) {
             return List.of();
         }
-        return danceTypes.stream().map(DanceType::getId).collect(Collectors.toList());
+        return danceTypes.stream().map(DanceType::getType).toList();
     }
 
     @Mapping(target = "danceTypes", ignore = true)
     @Mapping(target = "user", ignore = true)
-    @Mapping(target = "subscription", ignore = true)
     @Mapping(target = "status", ignore = true)
     void mapToUpdateChoreography(@MappingTarget Choreography choreography, ChoreographerRequest request);
 }
